# NothingLinux

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs  tray.rs  ui.rs  ui_state.rs
crates/app/src/ui/: artwork.rs  components.rs  navigation.rs  pages.rs  style.rs
crates/core/: Cargo.toml
crates/core/src/: discovery.rs  lib.rs  persistence.rs  session.rs
crates/core/src/session/: controller.rs  runner.rs  transport.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: commands.rs  frame.rs  lib.rs  types.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
data/: io.github.nothinglinux.nothinglinux.desktop  io.github.nothinglinux.nothinglinux.metainfo.xml
docs/: protocol.md
packaging/: build-linux-packages.sh
