[workspace]
members = ["crates/protocol", "crates/core", "crates/app", "crates/xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.85"

[workspace.dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_5"] }
async-trait = "0.1.89"
bluer = { version = "0.17.4", features = ["bluetoothd", "rfcomm"] }
directories = "6.0.0"
futures = "0.3.31"
gtk = { package = "gtk4", version = "0.11.4", features = ["v4_14"] }
ksni = { version = "0.3.5", default-features = false, features = ["tokio", "blocking"] }
notify-rust = "4.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
